# django-typst-engine

./: .gitignore  .readthedocs.yml  Justfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  issue---bug.md
.github/workflows/: ci.yml  publish.yml
docs/: index.md
docs/decisions/: 0000-architectural-decision-records.md  0001-context.md
docs/guides/: context.md
src/django_typst/: __init__.py  config.py  encoding.py  engine.py
src/tests/: settings.py
src/tests/django_typst/: test_config.py  test_encoding.py  test_engine.py
src/tests/example_app/typst/: app_dir_template.typ
