[project]
name = "django-typst"
version = "0.1.3"
description = "A Django template engine powered by Typst"
readme = "README.md"
authors = [
    { name = "Jonathan Moss", email = "xirisr@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Printing",
  "Topic :: Software Development :: Libraries",
]

license = "BSD-3-Clause"
license-files = ["LICENSE"]

requires-python = ">=3.11,<3.14"
dependencies = [
    "django>=5.2.0",
    "tomlkit>=0.13.3",
    "typst<=0.13.7",
]

[project.urls]

Homepage = "https://github.com/a-musing-moose/django-typst-engine/"
Repository = "https://github.com/a-musing-moose/django-typst-engine/"
Readme = "https://github.com/a-musing-moose/django-typst-engine/blob/master/README.md"
Documentation = "https://django-typst-engine.readthedocs.io/en/latest/"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy[mypyc]>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "pytest-spec>=5.0.0",
    "ruff>=0.12.11",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.21",
    "pyyaml-env-tag>=1.1",
]

[tool.mypy]
strict = true
exclude = "tests"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "django.*"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = "--rootdir src --spec"
spec_header_format = "{test_case} [{module_path}]:"
